# spiral

./: .gitignore  .gitlab-ci.yml  README.md  _gitignore  index.html
.devcontainer/: Dockerfile  devcontainer.json
lib/spiral/: Cargo.toml  am'.dib  am'.dib.html  am'.dib.ipynb  am'.spi  async.dib  async.dib.html  async.dib.ipynb  async.spi  async_.fsx  async_.py  async_.rs  async_.ts  async__contract.rs  async__wasm.rs  backend.spi  base.dib  base.dib.html  base.dib.ipynb  base.spi  benchmark.dib  benchmark.dib.html  benchmark.dib.ipynb  benchmark.spi  build.ps1  common.dib  common.dib.html  common.dib.ipynb  common.fsx  common.py  common.rs  common.spi  common.ts  common_contract.rs  common_wasm.rs  console.dib  console.dib.html  console.dib.ipynb  console.spi  convert.dib  (+171 more)
lib/spiral/leptos/: leptos.dib  leptos.dib.html  leptos.dib.ipynb  leptos.spi
lib/spiral/leptos/svg/: loading.spi
lib/spiral/leptos/ui/: tab_link.spi
lib/spiral/near/wallet/: Cargo.toml  build.ps1  gleam.toml  index.html  manifest.toml  package.json  playwright.config.ts
lib/spiral/near/wallet/playwright-report/: index.html
lib/spiral/near/wallet/src/: main.gleam  near_wallet.dib  near_wallet.dib.html  near_wallet.dib.ipynb  near_wallet.gleam  near_wallet.spi
lib/spiral/near/wallet/tests/: test.spec.ts
lib/spiral/rust/: near.dib  near.dib.html  near.dib.ipynb  near.spi  near_workspaces.dib  near_workspaces.dib.html  near_workspaces.dib.ipynb  rust.dib  rust.dib.html  rust.dib.ipynb  rust.spi  testing.dib  testing.dib.html  testing.dib.ipynb  testing.spi
workspace/: Cargo.toml
(+32 files in other folders)
