[package]
name = "spiral_lib"
workspace = "../../workspace"
version.workspace = true
edition.workspace = true
license-file.workspace = true
repository.workspace = true

[lib]
path = "lib_spiral.rs"

[dependencies]
inline_colorization = { workspace = true }
sha2 = { workspace = true }
regex = { workspace = true }
chrono = { workspace = true }
fable_library_rust = { workspace = true, features = ["static_do_bindings", "datetime", "guid", "threaded"] }
